--- a/gh-pages/index.html
+++ b/gh-pages/index.html
@@ -398,6 +398,7 @@
         <li>Occupy Icons - Icon Camp - (San Francisco) - November 2011</li>
         <li>Energy Efficiency - Iconathon - (Raleigh, NC) - 2011</li>
         <li>Sea Monsters - Icon Salon - (San Francisco) - April 2012</li>
+        <li>Pictobike - Icon Camp - (Curitaba, Brazil) - May 2012</li>
         <li>Archaeology - Icon Camp - (San Francisco) - May 2012</li>
         <li>Health Foo - Icon Salon - (Boston) - June 2012</li>
         <li>Central Market Revitalization - Iconathon - (San Francisco) - July 2012</li>
