spelled inkscape correctly

--- a/gh-pages/index.html
+++ b/gh-pages/index.html
@@ -220,7 +220,7 @@
         
         <h3>Share sketches</h3>
 
-        <p>After brainstorming new symbol ideas at a design event, you might want to make sure that the best ideas can become new scalable vector graphics (SVG). Sharing your sketches with people who can use vector editing programs like Illustrator and Inkspace will help you get your symbols closer to being finished. </p>
+        <p>After brainstorming new symbol ideas at a design event, you might want to make sure that the best ideas can become new scalable vector graphics (SVG). Sharing your sketches with people who can use vector editing programs like Illustrator and Inkscape will help you get your symbols closer to being finished. </p>
 
         <p>To share, upload images to Flickr, label your images, and tag them with Iconathon, IconCamp, or IconSalon.
         
